# antibot-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: client.rs  coalesce.rs  cookie.rs  debug_replay.rs  detect.rs  docker.rs  error.rs  fingerprint.rs  lib.rs  metrics.rs  proxy.rs  request.rs  retry.rs  session_cache.rs  stream.rs  types.rs  wire.rs
tests/: mock_provider.rs
