[package]
name = "antibot-rs"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Auto-managed Byparr/FlareSolverr client for bypassing bot detection in Rust web scrapers"
readme = "README.md"
repository = "https://github.com/agene0001/antibot-rs"
homepage = "https://github.com/agene0001/antibot-rs"
documentation = "https://docs.rs/antibot-rs"
keywords = ["captcha", "scraping", "byparr", "flaresolverr", "anti-bot"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["process", "time", "sync", "rt", "macros", "fs"] }
tracing = "0.1.44"
thiserror = "2.0.18"
dashmap = "6.2.1"
url = "2.5.4"
psl = "2"
http = "1.4.2"
futures = "0.3.31"

[dev-dependencies]
wiremock = "0.6.4"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tempfile = "3.14.0"
